chore: finished filter component

--- a/src/components/filter/filter.module.css
+++ b/src/components/filter/filter.module.css
@@ -1,10 +1,9 @@
 .filter-body {
-  max-height: 0;
+  display: 0;
   overflow: hidden;
-  transition: max-height 600ms ease-in-out;
+  transition: height 600ms ease-in-out;
 }
 
 .filter-body.expanded {
-  max-height: 150px;
-  /* Ajusta la altura máxima según sea necesario */
+  height: 150px;
 }
