--- a/src/components/admin/admin.module.css
+++ b/src/components/admin/admin.module.css
@@ -17,7 +17,7 @@
 
 .productItem, .adminGrid {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 16px;
 }
@@ -46,4 +46,12 @@
     align-items: center;
     justify-content: space-between;
     padding: 32px 32px 0px 32px;
+}
+
+.productItem div {
+    flex-basis: 100%;
+}
+
+.adminGrid div {
+    flex-basis: 1000%;
 }
