--- a/src/components/admin/admin.module.css
+++ b/src/components/admin/admin.module.css
@@ -65,4 +65,11 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
+    row-gap: 15px;
 }
+
+@media only screen and (min-width: 600px) {
+    .newProductForm  {
+        padding: 10px 300px;
+    }
+  }
